--- a/projects-list.html
+++ b/projects-list.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Projects</h1>
+
+    <section>
+        <a href="" id="logout--btn">Logout</a>
+        <a href="login.html" id="login--btn">Login</a>
+
+    </section>
+
     <section id="projects--wrapper">
 
     </section>
