--- a/projects-list.html
+++ b/projects-list.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-    <section>
-        <a href="" id="logout--btn">Logout</a>
-        <a href="login.html" id="login--btn">Login</a>
+    <section class="login--logout">
+        <a href="" id="logout--btn">LOGOUT</a>
+        <a href="login.html" id="login--btn">LOGIN</a>
 
     </section>
 
